cmake_minimum_required(VERSION 3.14.0)

message(">>>> JUB_SDK")

#message(">>>> CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")
#message(">>>> CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/utility SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/context SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/device SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libETH SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libHC SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/token SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/HDKey SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libBTC SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libEOS SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bigint SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoin SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoinABC SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/json/include SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/EOS SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Bravo SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/ed25519-donna SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/aes SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/sodium SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/sodium/private SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/sodium/private/fe_25_5 SRC_LIST)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/src/chacha20poly1305 SRC_LIST)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps)
if(IOS)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bleTransmit/ios)
elseif(ANDROID)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bleTransmit/android)
endif()
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bigint)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoin)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoinABC)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/libbitcoin)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/json/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/Bravo)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core/src/EOS)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/TrustWallet/wallet-core)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../trezor-crypto/include)

ADD_DEFINITIONS(-DTARGET_OS_IPHONE=1)
#add_compile_definitions(TARGET_OS_IPHONE=1)
#COMPILE_DEFINITIONS()
ADD_LIBRARY(JUB_SDK STATIC ${SRC_LIST})

# test endian.h
find_path(ENDIAN_PATH endian.h)
find_path(SYS_ENDIAN_PATH sys/endian.h)

if(ENDIAN_PATH)
    message("ENDIAN_PATH = ${ENDIAN_PATH}")
    target_compile_definitions(JUB_SDK PRIVATE HAVE_ENDIAN_H=1)
elseif(SYS_ENDIAN_PATH)
    message("SYS_ENDIAN_PATH = ${SYS_ENDIAN_PATH}")
    target_compile_definitions(JUB_SDK PRIVATE HAVE_SYS_ENDIAN_H=1)
endif()

